--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ol>
+            <li><a href="biriyani.html">Chicken Biriyani</a></li>
+        </ol>
     </body>
 </html>
