--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ol>
-            <li><a href="biriyani.html">Chicken Biriyani</a></li>
+            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/biriyani.html">Chicken Biriyani</a></li>
         </ol>
     </body>
 </html>
