--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -7,13 +7,14 @@
 
 <body>
     <h1>Chicken Biryani Recipe</h1>
+    <img src="https://wallpapercave.com/wp/wp7556073.jpg">
     <p>One of the most royal delicacies that you can enjoy on any occasion or festival, Chicken Biryani is the epitome
         of a one-pot meal. Well, no one can resist the sight of the aromatic and delicious Chicken Biryani recipe. If
         you are also craving that, then you need not go anywhere as we have got this super-easy biryani recipe for you.
         So, what are you waiting for? Do try this delicious Chicken Biryani recipe and enjoy it with your loved ones.
     </p>
     <h3>Ingredients of Chicken Biryani</h3>
-    <ol>
+    <ul>
         <li>1 cup boiled basmati rice</li>
         <li>1/2 teaspoon mint leaves</li>
         <li>salt as required</li>
@@ -36,17 +37,19 @@
         <li>1/2 tablespoon ginger</li>
         <li>2 drops kewra</li>
         <li>1 tablespoon rose water</li>
-    </ol>
+    </ul>
 
     <h3>How to make Chicken Biryani</h3>
-    <h3>Step 1 Prepare saffron-kewra water and chop veggies</h3>
-    <p>To make a delightful chicken biryani dish firstly soak saffron in water to prepare saffron water (One tsp saffron can be soaked in 1/4 cup water). Next, mix kewra drops in water and mix well to make kewra water. Set them aside for later usage. Now chop the onion and coriander leaves and keep them aside.</p>
-    <h3>Step 2 Saute the onions</h3>
-    <p>Meanwhile, heat refined oil in a deep bottomed pan. Once the oil is hot enough, add cumin seeds, bay leaf, green cardamom, black cardamom, cloves in it, and saute for about a minute. Then, add chopped onion to it and saute until pink. Now, add chicken into it with slit green chillies, turmeric, salt to taste, ginger garlic paste, red chilli powder and green chilli paste. Mix well all the spices and cook for 2-3 minutes. Then, add hung curd into it and give a mix. (Make sure the chicken is washed properly and patted dry before adding it to the dish)</p>
-    <h3>Step 3 Cook biryani on low heat for 5-6 minutes</h3>
-    <p>Turn the flame to medium again and add garam masala in it along with ginger julienned, coriander and mint leaves. Add kewra water, rose water and saffron water in it. Cook till the chicken is tender. Then add 1 cup cooked rice and spread evenly. Then add saffron water and pour ghee over it. You can now cook the dish without the lid or cover it with a lid to give a dum-effect due to the steam formation.</p>
-    <h3>Step 4 Serve hot chicken biryani with your favourite chutney or raita</h3>
-    <p>Cook for 15-20 minutes with a closed lid and garnish with 1 tbsp fried onions and coriander leaves. Serve hot chicken biryani with raita of your choice. Enjoy!</p>
+    <ol>
+        <li><strong>Step 1</strong> Prepare saffron-kewra water and chop veggies</li>
+        <p>To make a delightful chicken biryani dish firstly soak saffron in water to prepare saffron water (One tsp saffron can be soaked in 1/4 cup water). Next, mix kewra drops in water and mix well to make kewra water. Set them aside for later usage. Now chop the onion and coriander leaves and keep them aside.</p>
+        <li><strong>Step 2</strong> Saute the onions</li>
+        <p>Meanwhile, heat refined oil in a deep bottomed pan. Once the oil is hot enough, add cumin seeds, bay leaf, green cardamom, black cardamom, cloves in it, and saute for about a minute. Then, add chopped onion to it and saute until pink. Now, add chicken into it with slit green chillies, turmeric, salt to taste, ginger garlic paste, red chilli powder and green chilli paste. Mix well all the spices and cook for 2-3 minutes. Then, add hung curd into it and give a mix. (Make sure the chicken is washed properly and patted dry before adding it to the dish)</p>
+        <li><strong>Step 3</strong> Cook biryani on low heat for 5-6 minutes</li>
+        <p>Turn the flame to medium again and add garam masala in it along with ginger julienned, coriander and mint leaves. Add kewra water, rose water and saffron water in it. Cook till the chicken is tender. Then add 1 cup cooked rice and spread evenly. Then add saffron water and pour ghee over it. You can now cook the dish without the lid or cover it with a lid to give a dum-effect due to the steam formation.</p>
+        <li><strong>Step 4</strong> Serve hot chicken biryani with your favourite chutney or raita</li>
+        <p>Cook for 15-20 minutes with a closed lid and garnish with 1 tbsp fried onions and coriander leaves. Serve hot chicken biryani with raita of your choice. Enjoy!</p>
+    </ol>
 </body>
 
 </html>
