--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h3>Recepies Name</h3>
         <ol>
             <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/biriyani.html">Chicken Biriyani</a></li>
         </ol>
