dir update to the git

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Chicken Biryani Recipe</h1>
-    <img src="https://wallpapercave.com/wp/wp7556073.jpg">
+    <img src="http://www.shanfoods.com/assets/uploads/2016/11/biryani-banner.jpg">
     <p>One of the most royal delicacies that you can enjoy on any occasion or festival, Chicken Biryani is the epitome
         of a one-pot meal. Well, no one can resist the sight of the aromatic and delicious Chicken Biryani recipe. If
         you are also craving that, then you need not go anywhere as we have got this super-easy biryani recipe for you.
