error found at link of beef recipe. fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ol>
             <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/biriyani.html">Chicken Biriyani</a></li>
             <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/mutton-curry.html">Mutton Curry</a></li>
-            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/beef-curry.html"></a>Beef Curry</li>
+            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/beef-curry.html">Beef Curry</a></li>
         </ol>
     </body>
 </html>
