index page is modified, the expanded link url ir removed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <h1>Odin Recipes</h1>
         <h3>Recepies Name</h3>
         <ol>
-            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/biriyani.html">Chicken Biriyani</a></li>
-            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/mutton-curry.html">Mutton Curry</a></li>
-            <li><a href="/home/mabe/Documents/TheOdinProject/odin-recipe/recipes/beef-curry.html">Beef Curry</a></li>
+            <li><a href="recipes/biriyani.html">Chicken Biriyani</a></li>
+            <li><a href="recipes/mutton-curry.html">Mutton Curry</a></li>
+            <li><a href="recipes/beef-curry.html">Beef Curry</a></li>
         </ol>
     </body>
 </html>
